--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root@127.0.0.1:3309/linkit-data"
+DATABASE_URL='mysql://yi5ziyfcxv4mis8ntdz6:pscale_pw_Hm7dU9mb5dnpwz4pdlCHtkbdenvGjcUznUxJvXahVdQ@aws.connect.psdb.cloud/linkit-data?sslaccept=strict'
