--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.21.10",
-    "@nextui-org/react": "^1.0.0-beta.13",
     "@prisma/client": "^4.16.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -23,6 +22,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "prisma": "^4.16.1"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.25",
+    "prisma": "^4.16.1",
+    "tailwindcss": "^3.3.2"
   }
 }
